--- a/css/global.css
+++ b/css/global.css
@@ -2,12 +2,12 @@
   --primary-color: #8f0101;
   --secondary-color: #b81515;
 
-  --background-primary-color: #fff;
+  --background-primary-color: #ffffff;
   --background-secondary-color: #f5f5f5;
-  --background-tertiary-color: #0000;
+  --background-tertiary-color: #000000;
 
-  --text-primary-color: #222;
-  --text-secondary-color: #fff;
+  --text-primary-color: #222222;
+  --text-secondary-color: #ffffff;
 
   --title-weight: 700;
   --text-weight: 400;
@@ -33,4 +33,8 @@ button {
 h1 {
   font-family: "Montserrat";
   font-weight: var(--text-weight);
+}
+
+body {
+  font-family: "Montserrat";
 }
